// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormLogin /> should render component 1`] = `
<DocumentFragment>
  <form
    method="POST"
  >
    <div
      class="c-dMoIJA"
    >
      <label
        class="c-iKAemi"
        for="username"
      >
        Username
      </label>
      <input
        class="c-hjpsDP"
        data-testid="username"
        id="username"
        name="username"
        required=""
        type="text"
        value=""
      />
    </div>
    <div
      class="c-dMoIJA"
    >
      <label
        class="c-iKAemi"
        for="password"
      >
        Password
      </label>
      <input
        class="c-hjpsDP"
        data-testid="password"
        id="password"
        name="password"
        required=""
        type="password"
        value=""
      />
    </div>
    <input
      class="c-VRFby"
      data-testid="submit"
      type="submit"
      value="Log in"
    />
  </form>
</DocumentFragment>
`;

exports[`<FormLogin /> should render component in processing status 1`] = `
<DocumentFragment>
  <form
    method="POST"
  >
    <div
      class="c-dMoIJA"
    >
      <label
        class="c-iKAemi"
        for="username"
      >
        Username
      </label>
      <input
        class="c-hjpsDP"
        data-testid="username"
        id="username"
        name="username"
        required=""
        type="text"
        value=""
      />
    </div>
    <div
      class="c-dMoIJA"
    >
      <label
        class="c-iKAemi"
        for="password"
      >
        Password
      </label>
      <input
        class="c-hjpsDP"
        data-testid="password"
        id="password"
        name="password"
        required=""
        type="password"
        value=""
      />
    </div>
    <div
      class="c-jdlEte"
    >
      <span
        class="c-goHKWa"
      />
    </div>
  </form>
</DocumentFragment>
`;
